fix: remove different hover opacity in dark mode

--- a/_sass/klise/_dark.scss
+++ b/_sass/klise/_dark.scss
@@ -172,12 +172,6 @@ body[data-theme="dark"] {
           color: $dark-white;
         }
       }
-
-      .project-clickable {
-        &:hover {
-          opacity: 0.5;
-        }
-      }
     }
   }
 
